# LinuxFM-Player

./: AUTHORS  Makefile  Makefile.in  README  aclocal.m4  config.status  configure  configure.in
images/: Makefile  Makefile.am  Makefile.in
servers/: GNOME_LinuxFmPlayer.server  Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  linuxfm.py  mplayer.py
